[metadata]
name = bootstrapping-ao
description = Expand limited semantic correspondences between domains to enable latent communication through relative representations
url = https://github.com/icannistraci/bootstrapping-ao
long_description = file: README.md
author = Irene Cannistraci
author_email = irenecannistraci@gmail.com
keywords = python
license = MIT Licence

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    nn-template-core==0.2.*

    # Add project specific dependencies
    # Stuff easy to break with updates
    pytorch-lightning==1.7.*
    torchmetrics==0.10.*
    hydra-core==1.2.*
    wandb
    streamlit
    pandas==1.5.0
    backports.strenum
    plotly
    scikit-learn==1.0.2
    seaborn
    numerize
    setuptools_scm
    datasets
    spacy
    fasttext
    faiss-cpu
    setuptools==59.5.0

    transformers
    gensim
    # hydra-joblib-launcher

    # Stable stuff usually backward compatible
    distinctipy
    tueplots
    rich
    dvc
    python-dotenv
    matplotlib
    stqdm
    timm
    jupyter
    pykeops

    geotorch @ git+https://github.com/Lezcano/geotorch/

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md

[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mike

test =
    pytest
    pytest-cov

dev =
    black
    flake8
    isort
    pre-commit
    bandit
    %(test)s
    %(docs)s
